change index word location to word frequencies and the first location